# mkdocs-test

./: .gitignore  404.html  README.md  index.html  objects.inv  search.html
.github/workflows/: build_docs.yml
api/: index.html
docs/: api.md  index.md
search/: search_index.json
src/test/: some_code.py
test/: mkdocs.yml  pyproject.toml
test/tests/: test_some_code.py
