[project]
name = "test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Andre Manoel", email = "amanoel@nvidia.com" }
]
requires-python = ">=3.11"
dependencies = [
    "mkdocs>=1.6.1",
    "mkdocstrings>=0.30.1",
    "mkdocstrings-python>=1.18.2",
    "pytest>=8.4.2",
]

[project.scripts]
test = "test:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
